[package]
name = "status_update"
version = "0.1.0"
authors = ["sugas182 <sugas182@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.0"